# Project-Factory

./: CMakeLists.txt  Exceptions.h  Factory.cpp  Factory.h  Machine.cpp  Machine.h  MachineA.cpp  MachineA.h  MachineB.cpp  MachineB.h  Makefile  Product.cpp  Product.h  ProductA.cpp  ProductA.h  ProductB.cpp  ProductB.h  factory  main.cpp
